  term__term_to_type, term_io__read_term and term_io__write_term.
  Also beware that std_util__functor and std_util__deconstruct now
  return `[|]' rather than `.' for lists, and calls to std_util__construct
  which construct lists may need to be updated.

* The predicates and functions in int.m, float, math.m and array.m now 
  generate exceptions rather than program aborts on domain errors and
  out-of-bounds array accesses.

* We've removed the buggy reverse modes of the arithmetic functions in
  float.m and extras/complex_numbers (because of rounding errors the
  functions aren't actually reversible).

* We've removed the destructive update modes of string__set_char,
  string__set_char_det and string__unsafe_set_char. The compiler
  currently always stores constant strings in static data, even
  if they are passed to procedures with mode `di', so any attempt
  to update a constant string will cause a crash. Fixing this properly
  will be a lot of work, so for now we have just removed the modes.
 
* The exception module has a new predicate `try_store', which is
  like `try_io', but which works with stores rather than io__states.

* We've fixed a bug in time.m. Type `tm' didn't store the day of the month,
  which meant that the functions which required that field (e.g. time__asctime,
  time__mktime) did not work.

  The order of the fields of type `time__tm' has been changed so that
  comparison of values of type `tm' whose `tm_dst' fields are identical
  is equivalent to comparison of the times those values represent.

* We've added a predicate to io.m to return the last modification time
  of a file (io__file_modification_time).

* We've added a predicate `std_util__map_maybe/3' and a function
  `std_util__map_maybe/2' to apply a predicate or a function to
  a value stored in a term of type `std_util__maybe'.

* We've added a predicate version of `set__fold'.

* We've added some functions to the term_io module to return printable